# GodsOfAkkadu

./: .gitignore  CMakeLists.txt  CMakePresets.json
game/: project.godot  world.tscn
src/: CMakeLists.txt  register_types.cc
src/terrain/: terrain3d.cc  terrain3d.h
